tests/cases/functions/errors/lambda-missing-expected-type.ari
// check-function-errors: lambdas need an expected fn(...) -> ... type for the first implementation slice.
fn main() -> i64 {
  let add_one = fn(value) -> {
    value + 1
  };
  return add_one(1);
}
